--- a/style.css
+++ b/style.css
@@ -6,3 +6,14 @@ html, body {
 canvas {
   display: block;
 }
+
+.button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
