--- a/style.css
+++ b/style.css
@@ -8,12 +8,51 @@ canvas {
 }
 
 .button {
-  background-color: #4CAF50; /* Green */
+  background-color: #ffffff00;
   border: none;
-  color: white;
+  color: rgb(0, 199, 189);
+  opacity: 1;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 30px;
+  border-radius: 5px;
+}
+
+
+.link {
+  color: white;
+}
+
+
+
+.slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 5px;
+  border-radius: 10px;  
+  background:rgb(0, 199, 189);
+  outline: none;
+  opacity: 0.9;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 60px;
+  border-radius: 5%; 
+  background: #8401ff;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  border-radius: 5%;
+  background: #8401ff;
+  cursor: pointer;
 }
