--- a/style.css
+++ b/style.css
@@ -1,6 +1,41 @@
-html, body {
+html,body{
   margin: 0;
   padding: 0;
+}
+
+.rulesHTML{
+  background-image: url('assets/layerAssets/BopitCardGameLayer_0003_Layer-1.png');
+  background-size:     cover;                      /* <------ */
+  background-repeat:   no-repeat;
+  background-position: center center; 
+}
+
+.rulesHeader {
+  display: block;
+  font-size: 2em;
+  margin-top: 0.67em;
+  margin-bottom: 0.67em;
+  margin-left: 10;
+  margin-right: 0;
+  color:rgb(0, 199, 189);
+  font-weight: bold;
+  padding-left: 5px;
+
+}
+
+.rulesDiv {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+}
+
+
+
+.rulesP {
+  color:rgb(255, 255, 255);
+  padding-left: 10px;
+  padding-right: 10px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-weight:lighter;
 }
 
 canvas {
