--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ canvas {
   display: inline-block;
   font-size: 25px;
   border-radius: 5px;
+  font-family: 'Nunito', sans-serif;
 }
 
 .bigButton {
@@ -62,6 +63,7 @@ canvas {
   display: inline-block;
   font-size: 50px;
   border-radius: 5px;
+  font-family: 'Nunito', sans-serif;
 }
 
 
